Bug 260241 - [WebGPU] https://webgpu.github.io/webgpu-samples/samples/worker does not load
Summary: [WebGPU] https://webgpu.github.io/webgpu-samples/samples/worker does not load
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-08-15 19:03 PDT by Mike Wyrzykowski
Modified: 2023-10-02 14:03 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Wyrzykowski 2023-08-15 19:03:12 PDT
[WebGPU] https://webgpu.github.io/webgpu-samples/samples/worker does not load, it just presents a black screen. There is no apparent error
Comment 1 Radar WebKit Bug Importer 2023-08-15 19:03:30 PDT
<rdar://problem/113940893>
Comment 2 Mike Wyrzykowski 2023-09-29 23:22:54 PDT
Pull request: https://github.com/WebKit/WebKit/pull/18459
Comment 3 EWS 2023-10-02 14:03:29 PDT
Committed 268745@main (81820fabe5cd): <https://commits.webkit.org/268745@main>

Reviewed commits have been landed. Closing PR #18459 and removing active labels.